fix layout issues

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,7 @@
   top: 0;
   z-index: 100;
   width: 100vw;
+  padding: 0.5rem 0.8rem;
 }
 
 .navbar-lewagon .navbar-collapse {
