--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,7 +14,8 @@
 #large-header,
 #demo-canvas {
   position: relative;
-  height: calc(100vh - 50px) !important;
+  // height: calc(100vh - 50px) !important;
+  height: 100vh;
   width: 100vw;
   background-size: cover;
   background-position: center;
